[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aws-durable-execution-sdk-python-testing"
version = "0.0.1"
description = 'This the Python SDK for AWS Lambda Durable Execution.'
readme = "README.md"
requires-python = ">=3.13"
license = "Apache-2.0"
keywords = []
authors = [
  { name = "yaythomas", email = "tgaigher@amazon.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "boto3>=1.40.30",
  "aws_durable_execution_sdk_python @ git+ssh://git@github.com/aws/aws-durable-execution-sdk-python.git"
]

[project.urls]
Documentation = "https://github.com/aws/aws-durable-execution-sdk-python-testing#readme"
Issues = "https://github.com/aws/aws-durable-execution-sdk-python-testing/issues"
Source = "https://github.com/aws/aws-durable-execution-sdk-python-testing"

[tool.hatch.build.targets.sdist]
packages = ["src/aws_durable_execution_sdk_python_testing"]

[tool.hatch.build.targets.wheel]
packages = ["src/aws_durable_execution_sdk_python_testing"]

[tool.hatch.metadata] 
allow-direct-references = true

[tool.hatch.version]
path = "src/aws_durable_execution_sdk_python_testing/__about__.py"

# [tool.hatch.envs.default]
# dependencies=["pytest"]

# [tool.hatch.envs.default.scripts]
# test="pytest"

[tool.hatch.envs.test]
dependencies = [
    "coverage[toml]",
    "pytest",
    "pytest-cov",
]

[tool.hatch.envs.test.scripts]
cov="pytest --cov-report=term-missing --cov-config=pyproject.toml --cov=src/aws_durable_execution_sdk_python_testing --cov=tests --cov-fail-under=99"

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
  "pytest"
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/aws_durable_execution_sdk_python_testing tests}"

[tool.coverage.run]
source_pkgs = ["aws_durable_execution_sdk_python_testing", "tests"]
branch = true
parallel = true
omit = [
  "src/aws_durable_execution_sdk_python_testing/__about__.py",
]

[tool.coverage.paths]
aws_durable_execution_sdk_python_testing = ["src/aws_durable_execution_sdk_python_testing", "*/aws-durable-execution-sdk-python-testing/src/aws_durable_execution_sdk_python_testing"]
tests = ["tests", "*/aws-durable-execution-sdk-python-testing/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
  "@abstractmethod"
]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
preview = false

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["ARG001", "ARG002", "ARG005", "S101", "PLR2004", "SIM117", "TRY301"]
