[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aws-lambda-durable-functions-emulator"
dynamic = ["version"]
description = "Local emulator for AWS Lambda Durable Functions"
readme = "README.md"
requires-python = ">=3.13"
license = "Apache-2.0"
keywords = ["aws", "lambda", "durable", "functions", "emulator"]
authors = [
  { name = "AWS Lambda Team" },
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.13",
]
dependencies = [
  "aws-durable-execution-sdk-python-testing~=1.1.1",
  "aws_durable_execution_sdk_python~=1.3.0",
  "requests>=2.31.0,<3.0.0",
  "boto3>=1.34.0,<2.0.0",
]

[project.urls]
Documentation = "https://github.com/aws/aws-lambda-durable-functions-emulator#readme"
Issues = "https://github.com/aws/aws-lambda-durable-functions-emulator/issues"
Source = "https://github.com/aws/aws-lambda-durable-functions-emulator"

[project.scripts]
durable-functions-emulator = "aws_lambda_durable_functions_emulator.server:main"

[tool.hatch.build.targets.sdist]
packages = ["src/aws_lambda_durable_functions_emulator"]

[tool.hatch.build.targets.wheel]
packages = ["src/aws_lambda_durable_functions_emulator"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.version]
path = "src/aws_lambda_durable_functions_emulator/__about__.py"

[tool.hatch.envs.default]
dependencies = [
  "pytest",
]
dev-mode = true

[tool.hatch.envs.default.scripts]
test = "pytest {args:tests}"
dev = "python -m aws_lambda_durable_functions_emulator.server --host 127.0.0.1 --port 5000"
emulator = "python -m aws_lambda_durable_functions_emulator.server {args}"

[tool.hatch.envs.test]
dependencies = [
    "coverage[toml]",
    "pytest",
    "pytest-cov",
]

[tool.hatch.envs.test.scripts]
test = "pytest {args:tests}"
cov = "pytest --cov-report=term-missing --cov-config=pyproject.toml --cov=src/aws_lambda_durable_functions_emulator --cov=tests --cov-fail-under=60"

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
  "pytest",
  "types-boto3",
  "boto3-stubs[essential]",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/aws_lambda_durable_functions_emulator tests}"

[tool.hatch.envs.lint]
extra-dependencies = [
  "ruff>=0.1.0",
]
[tool.hatch.envs.lint.scripts]
check = "ruff check {args:src tests}"
format = "ruff format {args:src tests}"
fix = "ruff check --fix {args:src tests}"

[tool.ruff]
target-version = "py313"
line-length = 120

[tool.ruff.lint.isort]
known-first-party = ["aws_lambda_durable_functions_emulator"]

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.lint.per-file-ignores]
# Tests can use magic values, assertions, and relative imports
"tests/**/*" = ["PLR2004", "S101", "TID252", "S104"]
# Allow binding to all interfaces for server configuration
"src/aws_lambda_durable_functions_emulator/config.py" = ["S104"]

[tool.coverage.run]
source_pkgs = ["aws_lambda_durable_functions_emulator", "tests"]
branch = true
parallel = true
omit = [
  "src/aws_lambda_durable_functions_emulator/__about__.py",
]

[tool.coverage.paths]
aws_lambda_durable_functions_emulator = ["src/aws_lambda_durable_functions_emulator", "*/aws-durable-execution-sdk-python-testing/emulator/src/aws_lambda_durable_functions_emulator"]
tests = ["tests", "*/aws-durable-execution-sdk-python-testing/emulator/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]